--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,16 @@
         <activity android:name=".CameraActivity">
 
         </activity>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.cs492.skincam.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
+
     </application>
 
 </manifest>
