--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SkinCam">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".GalleryActivity"
             android:exported="false" />
